@@ -173,9 +173,11 @@ class SourceDaoImplTest {
                 List.of(organizer0, organizer1),
                 List.of(eventType0, eventType1, eventType2),
                 List.of(event0, event1, event2),
-                List.of(company0, company1, company2),
-                Collections.emptyList(),
-                List.of(speaker0, speaker1, speaker2, speaker3),
+                new SourceInformation.SpeakerInformation(
+                        List.of(company0, company1, company2),
+                        Collections.emptyList(),
+                        List.of(speaker0, speaker1, speaker2, speaker3)
+                ),
                 List.of(talk0, talk1, talk2));
         sourceDao = new SourceDaoImpl(sourceInformation);
     }
